# Anchor

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_redis.py  demo_personalization.py  docker-compose.yml  fix_score.py  implementation.md  live.md  log.md  pyproject.toml  render.yaml  requirements.txt  seed_and_validate.py  stuck_detection_docs.md  test_api.py  test_stuck.py  test_stuck_counts.py  validate_recommender.sh
alembic/: env.py
alembic/versions/: 20260717_0001_create_auth_tables.py  20260717_0002_create_projects_and_sessions.py  20260717_0003_create_execution_runs.py  20260717_0004_allow_standalone_execution_runs.py  20260717_0005_create_hint_events.py  20260717_0006_create_learner_profiles.py  20260718_0007_add_hint_event_source.py
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  live_nudge_state.py  logging.py  security.py
app/db/: base.py  session.py
app/merged_static/: design-system.css  index.html  ui-preferences.js
app/ml/: __init__.py  features.py  train_recommender.py
app/models/: README.md  __init__.py  execution.py  hint_event.py  learner_profile.py  project.py  user.py
app/prompt_templates/: __init__.py  explain_error.py  (+4 more)
docs/: implementation-plan.md
interview_engine/: .gitignore  README.md  __init__.py  log.md  setup.cfg  setup.py
tests/: __init__.py  conftest.py  test_auth.py  test_execution_analytics.py  test_health.py  test_live_nudge.py  test_mentor.py  test_personalization.py  test_projects.py  test_recommendation_service.py  test_static_analysis.py  test_stuck_detection_service.py
(+144 files in other folders)
