[project]
name = "ai-coding-mentor-api"
version = "0.1.0"
description = "Backend API for an adaptive AI coding mentor platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "authlib>=1.4,<2.0",
    "bcrypt>=4.0,<4.1",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "itsdangerous>=2.2,<3.0",
    "openai>=1.60,<2.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "pydantic-settings>=2.7,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "redis>=5.2,<6.0",
    "ruff>=0.9,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "structlog>=24.4,<26.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
